2001-05-15  Arturo Espinosa Aldama  <arturo@ximian.com>

	* replace.pl.in (xst_replace_interfaces_stanza_value): function renamed
	from "interface_stanza".

	* network.pl.in (xst_network_deb22_replace_bootproto): function renamed.
	
	* *-conf.in: Added support for Debian Woody. Woody users will have to
	do echo 'woody' > /etc/debian_version

	* boot.pl.in: debian-woody works as redhat-6.2.
	* network.pl.in: created new interface parse/replace tables for debian woody,
	because the /etc/network/interfaces format changes. Partialy implemented
	(only auto stanza supported, but not mapping stanza). Not tested.
	* parse.pl.in: stanza scanning routines no longer assume stanzas are iface
	type.
	* replace.pl.in: same here. Added auto_stanza create.

2001-05-16  Hans Petter Jansson  <hpj@ximian.com>

	* share.pl.in (xst_share_smb_info_get_name): Implement.
	  (xst_share_smb_info_set_name): Implement.
	  (xst_share_smb_table_find): Implement.
	  (xst_share_parse_smb_conf): Set share name as well.
	  (xst_share_replace_smb_conf): Implement.
	  (xst_share_replace_nfs_exports): Cosmetic fix.

	* replace.pl.in (xst_replace_ini): Change so that blank values will
	  remove the variable altogether.
	  (xst_replace_remove_ini_section): Implement.
	  (xst_replace_remove_ini_var): Implement.

	* test.pl: Test cases for my personal enjoyment tomorrow.

2001-05-15  Hans Petter Jansson  <hpj@ximian.com>

	* share.pl.in (xst_share_replace_nfs_exports): Implement.

2001-05-15  Hans Petter Jansson  <hpj@ximian.com>

	* share.pl.in (xst_share_smb_info_new): Implement.
	  (xst_share_smb_info_set): Implement.
	  (xst_share_smb_info_get_point): Implement.
	  (xst_share_smb_info_set_point): Implement.
	  (xst_share_smb_info_get_comment): Implement.
	  (xst_share_smb_info_set_comment): Implement.
	  (xst_share_smb_info_get_enabled): Implement.
	  (xst_share_smb_info_set_enabled): Implement.
	  (xst_share_smb_info_get_browse): Implement.
	  (xst_share_smb_info_set_browse): Implement.